# SPEL

./: .gitignore  README.md  pyproject.toml  revised-schema.puml  rse-schema.puml
SourceFiles/: check_config.sh  decompInitMod.F90  elm_initializeMod.F90  main.F90  nc_allocMod.F90  nc_io.F90  unittest_defs.h
SourceFiles/ftorch/: CMakeLists.txt  spel_emulator_mod.F90  test_main.F90
SourceFiles/ftorch/src/: emulator.F90  emulator_setup_mod.F90  field_mod.F90  kinds.F90  test_emulator.F90
SourceFiles/tests/: Test_NCF.F90  nc_io.F90  test.nc
scripts/: DerivedType.py  LoopConstructs.py  UnitTestforELM.py  aggregate.py  analyze_subroutines.py  check_sections.py  cli.py  config.py  debug.py  dynamic_globals.py  edit_files.py  export_objects.py  fortran_modules.py  get_types.py  gitutils.py  helper_functions.py  interfaces.py  logging_configs.py  mod_config.py  process_associate.py  refactor_tools.py  regex_testing.py  relerror.py  types.py  upload.sh  utilityFunctions.py  variable_analysis.py  write_routines.py
scripts/fortran_parser/: environment.py  evaluate.py  evaluate_ifs.py  lexer.py  sections.py  spel_ast.puml  spel_ast.py  spel_parser.py  spel_repl.py  tokens.py
scripts/io/: hdf5_io.py  helper.py  netcdf_io.py
scripts/ml_training/: dataset_analysis.py  gen_ftorch.py  inference.py  prepare_dataset.py  sample_spel_output.py  train.py
scripts/nml/: analyze_elm.py  analyze_ifs.py  analyze_namelist.py  generate_nml_tests.py  namelist_cascade.py
scripts/tests/: constants_mod.F90  example_functions.F90  expected_parse_results.py  shr_const_mod.F90  (+2 more)
(+79 files in other folders)
